Доработки дто
