# app/DTO/ProjectDTO.php
@@ -14,74 +14,67 @@ use Spatie\LaravelData\DataCollection;
  */
 class ProjectDTO extends Data
 {
-    /**
-     * @var float
-     *
-     * @OA\Property (
-     *     format="float",
-     *     example="1000.00"
-     * )
-     */
-    public float $totalBalance;
 
-    /**
-     * @var string
-     *
-     * @OA\Property (
-     *     format="string",
-     *     example="Car"
-     * )
-     */
-    public string $name;
-
-    /**
-     * @var DataCollection
-     * @OA\Property (
-     *     format="array",
-     *     @OA\Items(ref="#/components/schemas/Breadcrumb")
-     * )
-     */
-    #[DataCollectionOf(BreadcrumbDTO::class)]
-    public DataCollection $expenses;
-
-    /**
-     * @var DataCollection
-     * @OA\Property (
-     *     format="array",
-     *     @OA\Items(ref="#/components/schemas/Breadcrumb")
-     * )
-     */
-    #[DataCollectionOf(BreadcrumbDTO::class)]
-    public DataCollection $limits;
-
-    /**
-     * @var DataCollection
-     * @OA\Property (
-     *     format="array",
-     *     @OA\Items(ref="#/components/schemas/Breadcrumb")
-     * )
-     */
-    #[DataCollectionOf(BreadcrumbDTO::class)]
-    public DataCollection $incomes;
-
-    /**
-     * @var DataCollection
-     * @OA\Property (
-     *     format="array",
-     *     @OA\Items(ref="#/components/schemas/Breadcrumb")
-     * )
-     */
-    #[DataCollectionOf(BreadcrumbDTO::class)]
-    public DataCollection $categories;
 
     public function __construct(
-        float $totalBalance,
-        string $name,
-        iterable $expenses,
-        iterable $limits,
-        iterable $incomes,
-        iterable $categories
+        /**
+         * @var float
+         *
+         * @OA\Property (
+         *     format="float",
+         *     example="1000.00"
+         * )
+         */
+        public float           $totalBalance,
+
+        /**
+         * @var string
+         *
+         * @OA\Property (
+         *     format="string",
+         *     example="Car"
+         * )
+         */
+        public string          $name,
+
+        /**
+         * @var float
+         *
+         * @OA\Property (
+         *     format="float",
+         *     example="60000.00"
+         * )
+         */
+
+        public float           $expenses,
+
+        /**
+         * @var LimitDTO
+         * @OA\Property(ref="#/components/schemas/ProjectLimits")
+         */
+        public LimitDTO        $limits,
+
+        /**
+         * @var array
+         * @OA\Property (
+         *     format="array",
+         *     @OA\Items(ref="#/components/schemas/Category")
+         * )
+         */
+        #[DataCollectionOf(CategoryDTO::class)]
+        public DataCollection  $categories,
+
+        /**
+         * @var array|null
+         * @OA\Property (
+         *     format="array",
+         *     @OA\Items(type = "string")
+         * )
+         */
+        public ?DataCollection $incomes = null,
+
     )
     {
+
     }
 }
