# app/Models/Project.php
@@ -5,7 +5,13 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\HasMany;
+use Illuminate\Support\Collection;
 
+/**
+ * @property Expense[]|Collection $expenses
+ * @property float $budget
+ * @property float $spent
+ */
 class Project extends Model
 {
     use HasFactory;
@@ -16,4 +22,10 @@ class Project extends Model
     {
         return $this->hasMany(Expense::class);
     }
+
+    public function getSpentAttribute(): float
+    {
+        return $this->expenses()->sum('price');
+    }
+
 }
