# storage/api-docs/api-docs.json
@@ -7,7 +7,7 @@
     },
     "servers": [
         {
-            "url": "http://5.35.83.190",
+            "url": "http://31.128.46.70",
             "description": "Debug test server"
         }
     ],
@@ -210,6 +210,128 @@
     },
     "components": {
         "schemas": {
+            "Category": {
+                "description": "Информация о категории",
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "format": "string",
+                        "example": "food"
+                    },
+                    "purchaseCount": {
+                        "type": "integer",
+                        "format": "integer",
+                        "example": "15"
+                    },
+                    "icon": {
+                        "type": "string",
+                        "format": "string",
+                        "example": "https://example.com/path/to/file.jpg"
+                    },
+                    "totalExpenses": {
+                        "type": "number",
+                        "format": "float",
+                        "example": "150.00"
+                    },
+                    "personOfBudget": {
+                        "type": "integer",
+                        "format": "integer",
+                        "example": "20"
+                    }
+                },
+                "type": "object"
+            },
+            "ProjectLimits": {
+                "description": "Информация о лимитах",
+                "properties": {
+                    "spent": {
+                        "type": "number",
+                        "format": "float",
+                        "example": "500.00"
+                    },
+                    "limit": {
+                        "type": "number",
+                        "format": "float",
+                        "example": "1000.00"
+                    },
+                    "percent": {
+                        "type": "integer",
+                        "format": "integer",
+                        "example": "50"
+                    }
+                },
+                "type": "object"
+            },
+            "ProjectDetail": {
+                "description": "Детальная информация проекта",
+                "properties": {
+                    "totalBalance": {
+                        "type": "number",
+                        "format": "float",
+                        "example": "1000.00"
+                    },
+                    "name": {
+                        "type": "string",
+                        "format": "string",
+                        "example": "Car"
+                    },
+                    "expenses": {
+                        "type": "number",
+                        "format": "float",
+                        "example": "60000.00"
+                    },
+                    "limits": {
+                        "$ref": "#/components/schemas/ProjectLimits"
+                    },
+                    "categories": {
+                        "type": "array",
+                        "format": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Category"
+                        }
+                    },
+                    "incomes": {
+                        "type": "array",
+                        "format": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "nullable": true
+                    }
+                },
+                "type": "object"
+            },
+            "ProjectList": {
+                "description": "Список проектов",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "format": "int",
+                        "example": "1"
+                    },
+                    "name": {
+                        "type": "string",
+                        "format": "string",
+                        "example": "Car"
+                    },
+                    "spent": {
+                        "type": "number",
+                        "format": "float",
+                        "example": "600.00"
+                    },
+                    "budget": {
+                        "type": "number",
+                        "format": "float",
+                        "example": "60000.00"
+                    },
+                    "percent": {
+                        "type": "integer",
+                        "format": "int",
+                        "example": "50"
+                    }
+                },
+                "type": "object"
+            },
             "User": {
                 "description": "Информация о пользователе",
                 "properties": {
